--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {{> meta}}
+    <meta charset="utf-8">
+    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <title>LT君</title>
+    <link rel="stylesheet" href="./css/style.css">
+<script src="./js/app.js"></script>
   </head>
   <body>
     <div id="bg"></div>
