tweet 流し込みを実装

--- a/theme-sources/2014-12/src/index.html
+++ b/theme-sources/2014-12/src/index.html
@@ -31,8 +31,7 @@
       <div class="lt_speaker__name">monpy</div>
     </div>
 
-    <div class="audience_wrap">
+    <div class="audience_wrap"></div>
 
-    </div>
   </body>
 </html>
