--- a/theme-sources/2014-12/src/index.html
+++ b/theme-sources/2014-12/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>LT君</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="//typesquare.com/accessor/script/typesquare.js?C9d0J~XnhiU%3D"></script>
 <script src="./js/app.js"></script>
   </head>
   <body>
@@ -14,7 +15,7 @@
     <div class="ground"></div>
 
     <div id="speaker_title">
-      フル SVG サイトを一人で作ったよ 
+      フル SVG サイトを一人で作ったよ
     </div>
     <div id="speaker_body">
       <div class="zabuton">
@@ -25,7 +26,7 @@
 
     <div id="close_left"></div>
     <div id="close_right"></div>
-    
+
     <div id="lt_speaker">
       <div class="lt_speaker__foot"></div>
       <div class="lt_speaker__name">monpy</div>
