諸々機能追加

--- a/theme-sources/2014-12/src/index.html
+++ b/theme-sources/2014-12/src/index.html
@@ -13,9 +13,13 @@
 
     <div class="ground"></div>
 
+
     <div id="speaker_title">
       フル SVG サイトを一人で作ったよ 
     </div>
+
+    <div class='LT'><span class='L'>L</span><span class='T'>T</span></div>
+
     <div id="speaker_body">
       <div class="zabuton">
         <img src="images/zabuton.png" alt="">
@@ -26,12 +30,14 @@
     <div id="close_left"></div>
     <div id="close_right"></div>
     
+    <div class="syuryo hidden">
+      <img src="images/syuryo.png" height="287" width="430" alt="">
+    </div>
     <div id="lt_speaker">
       <div class="lt_speaker__foot"></div>
       <div class="lt_speaker__name">monpy</div>
     </div>
 
     <div class="audience_wrap"></div>
-
   </body>
 </html>
