--- a/theme-sources/2014-12/src/index.html
+++ b/theme-sources/2014-12/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-    <title>LT君</title>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>LT君 12月版</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="//typesquare.com/accessor/script/typesquare.js?C9d0J~XnhiU%3D"></script>
+    <script src="//typesquare.com/accessor/apiscript/typesquare.js?C9d0J~XnhiU%3D"></script>
 <script src="./js/app.js"></script>
   </head>
   <body>
@@ -16,7 +18,7 @@
 
 
     <div id="speaker_title">
-      フル SVG サイトを一人で作ったよ
+      月刊LT12月号の巻
     </div>
 
     <div class='LT'><span class='L'>L</span><span class='T'>T</span></div>
@@ -37,7 +39,7 @@
 
     <div id="lt_speaker">
       <div class="lt_speaker__foot"></div>
-      <div class="lt_speaker__name">monpy</div>
+      <div class="lt_speaker__name">提供 いいオフィスさん ＠ＬＩＧ</div>
     </div>
 
     <div class="audience_wrap"></div>
