--- a/theme-sources/2014-12/src/index.html
+++ b/theme-sources/2014-12/src/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title>LT君 12月版</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="//typesquare.com/accessor/apiscript/typesquare.js?C9d0J~XnhiU%3D"></script>
+    <script src="//typesquare.com/accessor/apiscript/typesquare.js?r9c5ertVpaU%3D"></script>
 <script src="./js/app.js"></script>
   </head>
   <body>
@@ -32,7 +32,7 @@
 
     <div id="close_left"></div>
     <div id="close_right"></div>
-    
+
     <div class="syuryo hidden">
       <img src="images/syuryo.png" height="287" width="430" alt="">
     </div>
